// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Test 1: Empty day 1`] = `
<div
  className="WeatherCard"
>
  <h3
    className=""
  >
    Invalid date
  </h3>
  <img
    alt="day icon"
    src="undefined/static/img/weather/.svg"
  />
  <div
    className="Name"
  >
    -1
     
  </div>
  <div
    className="Temp"
  >
    <span>
      0°
       
    </span>
    <span>
      0°
    </span>
  </div>
</div>
`;

exports[`Snapshot Test 2: Normal day 1`] = `
<div
  className="WeatherCard"
>
  <h3
    className=""
  >
    Yesterday
  </h3>
  <img
    alt="day icon"
    src="undefined/static/img/weather/lc.svg"
  />
  <div
    className="Name"
  >
    Light Cloud
     
  </div>
  <div
    className="Temp"
  >
    <span>
      22°
       
    </span>
    <span>
      13°
    </span>
  </div>
</div>
`;
